add pouchDB and start of db functionality

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,5 @@
-<header></header>
+<header fxLayoutAlign="start center">
+  <div class="title-container">
+    <h1 class="title">Kapuna Health Record</h1>
+  </div>
+</header>
