--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -2,52 +2,79 @@
   <h1 class="title">Database</h1>
 
   <div class="databases" fxLayout="row" fxLayoutGap="8px">
+    <div class="database"
+         [ngClass]="{'selected': selectedDatabase === 'log'}"
+         fxFlex fxLayoutAlign="start center" fxLayout="column"
+         (click)="selectedDatabase = 'log'">
+      <h3 class="title">Log</h3>
+    </div>
     <div *ngFor="let database of databaseService.databases" class="database"
+         [ngClass]="{'selected': selectedDatabase===database}"
          fxFlex fxLayoutAlign="start center" fxLayout="column"
          (click)="selectedDatabase = database">
       <h3 class="title">{{database.name | titlecase}}</h3>
-      <!--      <div>{{database.total_rows | async}} Documenten</div>-->
     </div>
   </div>
 
   <button fxFlex="50px" (click)="createPatient()">Create Patient</button>
 
-  <div class="database-log" fxFlex fxLayout="column" fxLayoutGap="4px">
-    <h3>Log</h3>
-      {{(log | async)?.length}}
-    <div class="log-item" *ngFor="let logItem of (log | async)">
+  <div class="database-log database-documents" fxFlex fxLayout="column" fxLayoutGap="4px">
 
-      <ng-container *ngIf="logItem.doc.type === 'error'">
+    <ng-container *ngIf="selectedDatabase==='log'; else documenten">
+      <div class="log-item" *ngFor="let logItem of (log | async)?.rows">
 
-        <div class="error-log" fxLayout="column">
+        <ng-container *ngIf="logItem.doc.type === 'error'">
 
-          <div class="log-header" fxLayout="row" fxLayoutGap="8px">
-            <span><strong>{{logItem.doc.message.status}}</strong></span>
-            <span>{{logItem.doc.message.name}}</span>
-            <div fxFlex class="fill-remaining-space"></div>
-            <span>{{logItem.doc.timeStamp | date: 'dd MMM yyyy - HH:mm:ss'}}</span>
+          <div class="error-log" fxLayout="column">
+
+            <div class="log-header" fxLayout="row" fxLayoutGap="8px">
+              <span><strong>{{logItem.doc.message.status}}</strong></span>
+              <span>{{logItem.doc.message.name}}</span>
+              <div fxFlex class="fill-remaining-space"></div>
+              <span>{{logItem.doc._id | date: 'dd MMM yyyy - HH:mm:ss'}}</span>
+            </div>
+
+            <span class="log-message">{{logItem.doc.message.docId}}: {{logItem.doc.message.message}}</span>
+
           </div>
+        </ng-container>
 
-          <span class="log-message">{{logItem.doc.message.docId}}: {{logItem.doc.message.message}}</span>
+        <ng-container *ngIf="logItem.doc.type === 'success'">
 
-        </div>
-      </ng-container>
+          <div class="success-log" fxLayout="column">
 
-      <ng-container *ngIf="logItem.doc.type === 'success'">
+            <div class="log-header" fxLayout="row" fxLayoutGap="8px">
+              <span><strong>{{logItem.doc.database}}:</strong> {{logItem.doc.mutation | titlecase}}</span>
+              <div fxFlex class="fill-remaining-space"></div>
+              <span>{{logItem.doc._id | date: 'dd MMM yyyy - HH:mm:ss'}}</span>
+            </div>
 
-        <div class="success-log" fxLayout="column">
+            <span>Ok: {{logItem.doc.message.ok}}</span>
 
-          <div class="log-header" fxLayout="row" fxLayoutGap="8px">
-            <span><strong>{{logItem.doc.database}}:</strong> {{logItem.doc.mutation | titlecase}}</span>
-            <div fxFlex class="fill-remaining-space"></div>
-            <span>{{logItem.doc.timeStamp | date: 'dd MMM yyyy - HH:mm:ss'}}</span>
           </div>
+        </ng-container>
 
-          <span>Ok: {{logItem.doc.message.ok}}</span>
+
+      </div>
+    </ng-container>
+
+
+    <ng-template #documenten>
+      <h3>{{selectedDatabase.name}}</h3>
+      <div fxLayout="column" fxLayoutGap="4px">
+        <div class="document" *ngFor="let document of (selectedDatabase.documenten$ | async)?.rows">
+          <div fxLayout="column">
+          <span *ngFor="let entry of getObjectEntries(document.doc)">
+            <table fxFlex>
+              <tr>
+                <td fxFlex="30%">{{entry[0] + ': '}}</td>
+                <td fxFlex>{{entry[1]}}</td>
+              </tr>
+            </table>
+          </span>
         </div>
-      </ng-container>
-
-
-    </div>
+        </div>
+      </div>
+    </ng-template>
   </div>
 </div>
