--- a/src/app/database/database.component.scss
+++ b/src/app/database/database.component.scss
@@ -1,72 +1,3 @@
-.container {
-  background-color: #2C302E;
-  height: 100vh;
-  padding: 1rem;
-
-  .title {
-    color: white;
-  }
-
-  .databases {
-    margin-top: 1rem;
-
-    .database {
-      background-color: #909590;
-
-      &.selected {
-        background-color: #3C493F;
-      }
-
-      color: white;
-
-      border-radius: 2px;
-
-      height: 100px;
-
-      &:hover {
-        transform: translateY(-2px);
-      }
-
-      transition: transform .2s ease;
-    }
-  }
-
-
-  .database-log {
-    height: auto;
-    color: white;
-
-    overflow-y: scroll;
-
-    .log-item {
-      .error-log {
-        border: #A7222D solid 2px;
-        border-radius: 2px;
-        color: #2E0A0D;
-        background-color: #E79BA1;
-        padding: 4px;
-      }
-      .success-log {
-        border: #403F4C solid 2px;
-        border-radius: 2px;
-        color: #121215;
-        background-color: #A8A7AD;
-        padding: 4px;
-      }
-      .log-header {
-        font-size: 20px;
-      }
-    }
-
-    .document {
-      padding: 4px;
-      border: 1px solid white;
-
-      table {
-        border-collapse: collapse;
-        td, tr {
-        }
-      }
-    }
-  }
+.documents {
+  margin: 0 8px;
 }
