--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~jsoneditor/dist/jsoneditor.min.css';
 
 /* You can add global styles to this file, and also import other style files */
 html, body {
