added save and cancel buttons to json edit dialog

--- a/src/app/database/edit-document-dialog/edit-document-dialog.component.html
+++ b/src/app/database/edit-document-dialog/edit-document-dialog.component.html
@@ -1,2 +1,7 @@
-<json-editor style="height: 500px" [options]="editorOptions" [data]="json"></json-editor>
-
+<div fxLayout="column" fxLayoutGap="8px">
+  <json-editor style="height: 500px" [options]="editorOptions" [data]="json"></json-editor>
+  <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="8px">
+    <button mat-flat-button color="accent" (click)="onNoClick()">Cancel</button>
+    <button mat-flat-button color="primary" [mat-dialog-close]="json">Save changes</button>
+  </div>
+</div>
